--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -8,121 +5,100 @@ asgiref==3.8.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
-beautifulsoup4==4.13.3
+beautifulsoup4==4.13.4
 blinker==1.9.0
-bs4==0.0.2
 build==1.2.2.post1
 cachetools==5.5.2
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
 chroma-hnswlib==0.7.6
-click==8.1.8
+chromadb==0.6.3
+click==8.2.0
 colorama==0.4.6
 coloredlogs==15.0.1
-contourpy==1.3.1
-cycler==0.12.1
-dataclasses-json==0.6.7
 Deprecated==1.2.18
 distro==1.9.0
-dotenv==0.9.9
 durationpy==0.9
 fastapi==0.115.9
 filelock==3.18.0
 flatbuffers==25.2.10
-fonttools==4.56.0
-frozenlist==1.6.0
 fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
-google-auth==2.39.0
+google-auth==2.40.1
+google-search==1.1.1
 googleapis-common-protos==1.70.0
-greenlet==3.1.1
+googlesearch-python==1.3.0
+greenlet==3.2.2
 grpcio==1.71.0
-h11==0.14.0
-httpcore==1.0.8
+h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.30.2
+huggingface-hub==0.31.1
 humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
-iniconfig==2.1.0
 Jinja2==3.1.6
-jiter==0.9.0
-joblib==1.4.2
+joblib==1.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
+jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
 langchain==0.3.25
-langchain-community==0.3.23
+langchain-chroma==0.2.3
 langchain-core==0.3.59
+langchain-huggingface==0.2.0
 langchain-ollama==0.3.2
 langchain-text-splitters==0.3.8
-langsmith==0.3.31
-lxml==5.3.1
+langsmith==0.3.42
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.1
 mdurl==0.1.2
 mmh3==5.1.0
-monotonic==1.6
 mpmath==1.3.0
-multidict==6.4.3
-mypy_extensions==1.1.0
-narwhals==1.32.0
-nepse==0.1.7
+narwhals==1.39.0
 networkx==3.4.2
-nltk==3.9.1
-numpy==2.2.4
+numpy==2.2.5
 oauthlib==3.2.2
 ollama==0.4.8
-onnxruntime==1.21.0
-openai==1.78.0
-opentelemetry-api==1.32.1
-opentelemetry-exporter-otlp-proto-common==1.32.1
-opentelemetry-proto==1.32.1
-opentelemetry-semantic-conventions==0.53b1
-opentelemetry-util-http==0.53b1
-orjson==3.10.16
+onnxruntime==1.22.0
+opentelemetry-api==1.33.0
+opentelemetry-exporter-otlp-proto-common==1.33.0
+opentelemetry-exporter-otlp-proto-grpc==1.33.0
+opentelemetry-instrumentation==0.54b0
+opentelemetry-instrumentation-asgi==0.54b0
+opentelemetry-instrumentation-fastapi==0.54b0
+opentelemetry-proto==1.33.0
+opentelemetry-sdk==1.33.0
+opentelemetry-semantic-conventions==0.54b0
+opentelemetry-util-http==0.54b0
+orjson==3.10.18
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
-pandas-datareader==0.10.0
-pillow==11.1.0
-playwright==1.51.0
-pluggy==1.5.0
-posthog==3.25.0
-propcache==0.3.1
+pillow==11.2.1
+posthog==4.0.1
 protobuf==5.29.4
-pyarrow==19.0.1
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
-pydantic==2.11.3
-pydantic-settings==2.9.1
-pydantic_core==2.33.1
+pydantic==2.11.4
+pydantic_core==2.33.2
 pydeck==0.9.1
-pyee==12.1.1
 Pygments==2.19.1
-pyparsing==3.2.3
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 PySocks==1.7.1
-pytest==8.3.5
-pytest-base-url==2.1.0
-pytest-playwright==0.7.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-slugify==8.0.4
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
@@ -135,52 +111,41 @@ rpds-py==0.24.0
 rsa==4.9.1
 safetensors==0.5.3
 scikit-learn==1.6.1
-scipy==1.15.2
-selenium==4.30.0
+scipy==1.15.3
+selenium==4.32.0
+sentence-transformers==4.1.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-snowballstemmer==2.2.0
 sortedcontainers==2.4.0
-soupsieve==2.6
+soupsieve==2.7
 SQLAlchemy==2.0.40
 starlette==0.45.3
-stem==1.8.2
-stock-trader==0.0.4
-streamlit==1.44.0
-sympy==1.13.1
-tenacity==9.0.0
-text-unidecode==1.3
+streamlit==1.45.1
+streamlit-lottie==0.0.5
+sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.6.0
+torch==2.7.0
 tornado==6.4.2
 tqdm==4.67.1
 transformers==4.51.3
-trio==0.29.0
+trio==0.30.0
 trio-websocket==0.12.2
-typer
-typing-inspect==0.9.0
+typer==0.15.3
 typing-inspection==0.4.0
-typing_extensions==4.13.0
+typing_extensions==4.13.2
 tzdata==2025.2
-urllib3==2.3.0
-uv==0.6.14
-uvicorn==0.34.1
+urllib3==2.4.0
+uvicorn==0.34.2
 watchdog==6.0.0
 watchfiles==1.0.5
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
 wsproto==1.2.0
-xgboost==3.0.0
-yarl==1.20.0
 zipp==3.21.0
 zstandard==0.23.0
-googlesearch-python
-sentence-transformers
-streamlit
-langchain
-chromadb
