--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 annotated-types==0.7.0
+antiorm==1.2.1
 anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
@@ -17,6 +18,8 @@ chromadb==0.6.3
 click==8.2.0
 colorama==0.4.6
 coloredlogs==15.0.1
+db==0.1.1
+db-sqlite3==0.0.1
 Deprecated==1.2.18
 distro==1.9.0
 durationpy==0.9
@@ -129,7 +132,7 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.7.0
+torch==2.7.0+cpu
 tornado==6.4.2
 tqdm==4.67.1
 transformers==4.51.3
