--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,154 @@
-altair==5.5.0
-annotated-types==0.7.0
-antiorm==1.2.1
-anyio==4.9.0
-asgiref==3.8.1
-attrs==25.3.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-chroma-hnswlib==0.7.6
-chromadb==0.6.3
-click==8.2.0
-colorama==0.4.6
-coloredlogs==15.0.1
-db==0.1.1
-db-sqlite3==0.0.1
-Deprecated==1.2.18
-distro==1.9.0
-durationpy==0.9
-fastapi==0.115.9
-filelock==3.18.0
-flatbuffers==25.2.10
-fsspec==2025.3.2
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.1
-google-search==1.1.1
-googleapis-common-protos==1.70.0
-googlesearch-python==1.3.0
-greenlet==3.2.2
-grpcio==1.71.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.31.1
-humanfriendly==10.0
-idna==3.10
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-Jinja2==3.1.6
-joblib==1.5.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-kubernetes==32.0.1
-langchain==0.3.25
-langchain-chroma==0.2.3
-langchain-core==0.3.59
-langchain-huggingface==0.2.0
-langchain-ollama==0.3.2
-langchain-text-splitters==0.3.8
-langsmith==0.3.42
-lxml==5.4.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mmh3==5.1.0
-mpmath==1.3.0
-narwhals==1.39.0
-networkx==3.4.2
-numpy==2.2.5
-oauthlib==3.2.2
-ollama==0.4.8
-onnxruntime==1.22.0
-opentelemetry-api==1.33.0
-opentelemetry-exporter-otlp-proto-common==1.33.0
-opentelemetry-exporter-otlp-proto-grpc==1.33.0
-opentelemetry-instrumentation==0.54b0
-opentelemetry-instrumentation-asgi==0.54b0
-opentelemetry-instrumentation-fastapi==0.54b0
-opentelemetry-proto==1.33.0
-opentelemetry-sdk==1.33.0
-opentelemetry-semantic-conventions==0.54b0
-opentelemetry-util-http==0.54b0
-orjson==3.10.18
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-posthog==4.0.1
-protobuf==5.29.4
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.4
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rpds-py==0.24.0
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.3
-selenium==4.32.0
-sentence-transformers==4.1.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-SQLAlchemy==2.0.40
-starlette==0.45.3
-streamlit==1.45.1
-streamlit-lottie==0.0.5
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-toml==0.10.2
-torch==2.7.0+cpu
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.51.3
-trio==0.30.0
-trio-websocket==0.12.2
-typer==0.15.3
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-uvicorn==0.34.2
-watchdog==6.0.0
-watchfiles==1.0.5
-websocket-client==1.8.0
-websockets==15.0.1
-wrapt==1.17.2
-wsproto==1.2.0
-zipp==3.21.0
-zstandard==0.23.0
+altair
+annotated-types
+antiorm
+anyio
+asgiref
+attrs
+backoff
+bcrypt
+beautifulsoup4
+blinker
+build
+cachetools
+certifi
+cffi
+charset-normalizer
+chroma-hnswlib
+chromadb
+click
+colorama
+coloredlogs
+db
+db-sqlite3
+Deprecated
+distro
+durationpy
+fastapi
+filelock
+flatbuffers
+fsspec
+gitdb
+GitPython
+google-auth
+google-search
+googleapis-common-protos
+googlesearch-python
+greenlet
+grpcio
+h11
+httpcore
+httptools
+httpx
+huggingface-hub
+humanfriendly
+idna
+importlib_metadata
+importlib_resources
+Jinja2
+joblib
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
+kubernetes
+langchain
+langchain-chroma
+langchain-core
+langchain-huggingface
+langchain-ollama
+langchain-text-splitters
+langsmith
+lxml
+markdown-it-py
+MarkupSafe
+mdurl
+mmh3
+mpmath
+narwhals
+networkx
+numpy
+oauthlib
+ollama
+onnxruntime
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+orjson
+outcome
+overrides
+packaging
+pandas
+pillow
+posthog
+protobuf
+pyarrow
+pyasn1
+pyasn1_modules
+pycparser
+pydantic
+pydantic_core
+pydeck
+Pygments
+PyPika
+pyproject_hooks
+pyreadline3
+PySocks
+python-dateutil
+python-dotenv
+pytz
+PyYAML
+referencing
+regex
+requests
+requests-oauthlib
+requests-toolbelt
+rich
+rpds-py
+rsa
+safetensors
+scikit-learn
+scipy
+selenium
+sentence-transformers
+shellingham
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+SQLAlchemy
+starlette
+streamlit
+streamlit-lottie
+sympy
+tenacity
+threadpoolctl
+tokenizers
+toml
+torch
+tornado
+tqdm
+transformers
+trio
+trio-websocket
+typer
+typing-inspection
+typing_extensions
+tzdata
+urllib3
+uvicorn
+watchdog
+watchfiles
+websocket-client
+websockets
+wrapt
+wsproto
+zipp
+zstandard
