--- a/.github/workflows/sync_to_hf_space.yml
+++ b/.github/workflows/sync_to_hf_space.yml
@@ -24,4 +24,4 @@ jobs:
           cd hf_space
           git add .
           git commit -m "Sync from GitHub"
-          git push https://coolsajan:$HF_TOKEN@huggingface.co/spaces/coolsajan/mygreatfoodbuddie main
+          git push https://oauth2:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/coolsajan/mygreatfoodbuddie main
