--- a/.huggingface.yaml
+++ b/.huggingface.yaml
@@ -5,6 +5,8 @@ colorFrom: indigo
 colorTo: pink
 sdk: streamlit
 sdk_version: "1.45.1"
+suggested_hardware: "cpu-basic"
+suggested_storgae: "medium"
 app_file: app.py
 pinned: false
 ---
