--- a/.github/workflows/sync_to_hf_space.yml
+++ b/.github/workflows/sync_to_hf_space.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git config --global user.email "tsajan001@gmail.com"
           git config --global user.name "Sajan Thapa"
-          git clone https://huggingface.co/spaces/coolsajan/mygreatfoodbuddie hf_space
+          git clone https://oauth2:${HF_TOKEN}@huggingface.co/spaces/coolsajan/mygreatfoodbuddie hf_space
           rsync -av --exclude='.git' ./ hf_space/
           cd hf_space
           git add .
